verification-page-alignment-fix

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
@@ -7039,3 +7039,13 @@
     border-radius: 8px;
     padding: 10px;
  }
+
+ .page-checkSubscriptionFee .verification-div-sub .btn{
+    line-height: 50px  !important;
+}
+
+.page-checkSubscriptionFee .verification-div-sub .accountLogin-buttonWrapper{
+   margin-top: 0px !important;
+}
+
+.page-checkSubscriptionFee .verification-div-sub .accountLogin-content p{ margin-bottom: 8px !important;}
